@@ -46,42 +46,45 @@ extern FILE	*stdin, *stdout, *stderr;
 #define SEEK_CUR	1
 #define SEEK_END	2
 
-void	clearerr(FILE *f);
-int	fclose(FILE *f);
+void	 clearerr(FILE *f);
+int	 fclose(FILE *f);
 FILE	*fdopen(int fd, char *mode);
-int	feof(FILE *f);
-int	ferror(FILE *f);
-int	fflush(FILE *f);
-int	fgetc(FILE *f);
-int	fgetpos(FILE *f, int *ppos);
+int	 feof(FILE *f);
+int	 ferror(FILE *f);
+int	 fflush(FILE *f);
+int	 fgetc(FILE *f);
+int	 fgetpos(FILE *f, int *ppos);
 char	*fgets(char *buf, int len, FILE *f);
-int	fileno(FILE *f);
+int	 fileno(FILE *f);
 FILE	*fopen(char *path, char *mode);
-int	fprintf(FILE *f, char *fmt, ...);
-int	fputc(int c, FILE *f);
-int	fputs(char *s, FILE *f);
-int	fread(void *buf, int size, int count, FILE *f);
+int	 fprintf(FILE *f, char *fmt, ...);
+int	 fputc(int c, FILE *f);
+int	 fputs(char *s, FILE *f);
+int	 fread(void *buf, int size, int count, FILE *f);
 FILE	*freopen(char *path, char *mode, FILE *f);
-int	fscanf(FILE *f, char *fmt, ...);
-int	fseek(FILE *f, int off, int how);
-int	fsetpos(FILE *f, int *ppos);
-int	ftell(FILE *f);
-int	fwrite(void *buf, int size, int count, FILE *f);
-int	getchar(void);
+int	 fscanf(FILE *f, char *fmt, ...);
+int	 fseek(FILE *f, int off, int how);
+int	 fsetpos(FILE *f, int *ppos);
+int	 ftell(FILE *f);
+int	 fwrite(void *buf, int size, int count, FILE *f);
+int	 getchar(void);
 char	*gets(char *buf);
-int	kprintf(int fd, char *fmt, ...);
-void	perror(char *s);
-int	printf(char *fmt, ...);
-int	putchar(int c);
-int	puts(char *s);
-int	remove(char *path);
-int	rename(char *from, char *to);
-void	rewind(FILE *f);
-int	scanf(char *fmt, ...);
-void	setbuf(FILE *f, char *buf);
-int	setvbuf(FILE *f, char *buf, int mode, int size);
-int	sscanf(char *s, char *fmt, ...);
-int	sprintf(char *buf, char *fmt, ...);
+int	 kprintf(int fd, char *fmt, ...);
+void	 perror(char *s);
+int	 printf(char *fmt, ...);
+int	 putchar(int c);
+int	 puts(char *s);
+int	 remove(char *path);
+int	 rename(char *from, char *to);
+void	 rewind(FILE *f);
+int	 scanf(char *fmt, ...);
+void	 setbuf(FILE *f, char *buf);
+int	 setvbuf(FILE *f, char *buf, int mode, int size);
+int	 sscanf(char *s, char *fmt, ...);
+int	 sprintf(char *buf, char *fmt, ...);
 char	*tmpnam(char *buf);
 FILE	*tmpfile(void);
-int	ungetc(int c, FILE *f);
+int	 ungetc(int c, FILE *f);
+int	 vfprintf(FILE *f, char *fmt, void **args);
+int	 vprintf(char *fmt, void **args);
+int	 vsprintf(char *buf, char *fmt, void **args);
